<resources>
    <string name="app_name">PracticeSampleDrawables</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Introduction">This sample app demos the usage of Android Drawables.</string>
    <string name="bitmap_title">BitmapDrawable</string>
    <!-- shape drawables-->
    <string name="shape_title">ShapeDrawable</string>
    <string name="circle">Circle</string>
    <string name="rectangle">Rectangle</string>
    <!-- state list drawable-->
    <string name="state_title">StateListDrawable</string>
    <!-- nine patch drawable-->
    <string name="nine_patch_title">NinePatchDrawable</string>
</resources>
