<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Introduction"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bitmap_title"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/mirror_dimen"
            android:background="@drawable/mirror"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shape_title"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin">
            <TextView
                android:layout_width="@dimen/circle_radius"
                android:layout_height="@dimen/circle_radius"
                android:background="@drawable/circle"
                android:text="@string/circle"
                android:textSize="12dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginRight="@dimen/horizontal_margin"/>
            <TextView
                android:layout_width="@dimen/rectangle_width"
                android:layout_height="@dimen/rectangle_height"
                android:background="@drawable/rectangle"
                android:text="@string/rectangle"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/blue"
                android:layout_marginRight="@dimen/horizontal_margin"/>
            <Button
                android:layout_width="@dimen/circle_radius"
                android:layout_height="@dimen/circle_radius"
                android:background="@drawable/circle"
                android:text="Button"
                android:gravity="center"
                android:textSize="10dp"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_title"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:text="Button"
            android:textSize="12dp"
            android:textColor="@color/blue"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine_patch_title"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <Button
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:text="Ok!"
            android:background="@drawable/button"/>
    </LinearLayout>

</ScrollView>